2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-02-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 2.2-SNAPSHOT.

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.1.0.

2020-01-18  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.3.
	Use ball:parent:20200117.0.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.2.
	Use ball:parent:20200102.0.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.1.
	Use ball:parent:20191206.0.

2019-03-27  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 2.0.0.

2019-02-07  Allen D. Ball  <ball@sol.local>

	* Removed custom annotations that have a javax.ws.rs counterpart.

2019-02-05  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ProtocolInvocationHandler.java:
	Support interface default methods.

	* src/main/java/ball/http/ProtocolRequestBuilder.java:
	Leverage parameter names through reflection.
	Define supported, un-annotated parameters.

2019-01-31  Allen D. Ball  <ball@sol.local>

	* Start development of 2.0-SNAPSHOT.

2018-07-31  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.0.

2018-07-24  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ProtocolClient.java:
	Expose Charset, JAXBContext, and ObjectMapper fields to
	sublcasses.

2018-05-23  Allen D. Ball  <ball@sol.local>

	* Made ball.http.annotation.* annotation names consistent with
	javax.ws.rs.* standards.

	* src/main/java/ball/http/ProtocolRequestBuilder.java:
	Added support for javax.ws.rs annotations.

2017-08-12  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolResponseHandler.java:
	Handle complex protocol method return types.

2017-08-01  Allen D. Ball  <ball@sol>

	* Re-factored ProtocolClientBuilder into ProtocolClient,
	ProtocolInvocationHandler, ProtocolRequestBuilder, and
	ProtocolResponseHandler.
